force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/ICV_Contract_Performance_Party_Commit__c.object-meta.xml
<CustomObject>
    <label>ICV Contract Performance Party Commit</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>ICV Contract Peformance Party Commitment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICV Contract Performance Party Commit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>