force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Active_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Active_Indicator__c</fullName>
    <label>Active Indicator</label>
    <length>5</length>
    <type>Text</type>
</CustomField>