force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Average_Days_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Average_Days_To_Pay__c</fullName>
    <label>Average Days To Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>