force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Commitment_Id__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Id__c</fullName>
    <label>Commitment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>