force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Commitment_Type__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Type__c</fullName>
    <label>Commitment Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>