force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/ICV_Contract_Performance_Party__c.field-meta.xml
<CustomField>
    <fullName>ICV_Contract_Performance_Party__c</fullName>
    <label>ICV Contract Performance Party</label>
    <referenceTo>ICV_Contract_Performance_Party__c</referenceTo>
    <relationshipName>ICV_Contract_Peformance_Party_Commitment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>