force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Inactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactivation_Date__c</fullName>
    <label>Inactivation Date</label>
    <type>Date</type>
</CustomField>