force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Payments_0_30__c.field-meta.xml
<CustomField>
    <fullName>Payments_0_30__c</fullName>
    <label>Payments 0-30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>