force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Payments_121_Over__c.field-meta.xml
<CustomField>
    <fullName>Payments_121_Over__c</fullName>
    <label>Payments 121-Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>