force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Payments_31_60__c.field-meta.xml
<CustomField>
    <fullName>Payments_31_60__c</fullName>
    <label>Payments 31-60</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>