force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Payments_61_90__c.field-meta.xml
<CustomField>
    <fullName>Payments_61_90__c</fullName>
    <label>Payments 61-90</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>