force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Write_Off__c</fullName>
    <label>Write Off</label>
    <length>20</length>
    <type>Text</type>
</CustomField>