force-app/main/default/objects/ICV_Contract_Performance_Party_Commit__c/fields/Write_Off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Reason__c</fullName>
    <label>Write Off Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>